@@ -1,4 +1,10 @@
 ############################################################
+EFA Version 3.0.1.3 Changes
+############################################################
+
+Issue #308  Bug             - ClamAV Status Page blank
+
+############################################################
 EFA Version 3.0.1.2 Changes
 ############################################################
 
